# StudioAgent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  nginx.conf  prompt.md  pyproject.toml  requirements.txt
app/: config.py  main.py  worker_process.py
app/agent/: analyzer.py  client.py  models.py  planner.py  prompts.py
app/api/: routes.py  schemas.py
app/jobs/: manager.py  models.py  worker.py
app/processing/: audio_engine.py  ffmpeg_engine.py  moviepy_engine.py  opencv_engine.py  pipeline.py  subtitle_engine.py
app/static/: app.js  index.html  style.css
app/storage/: gcs.py
scripts/: run_local.bat  run_local.sh  setup_gcp.sh
